--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "http-status": "^1.3.2",
     "isomorphic-unfetch": "^3.0.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "next": "8.0.4",
     "react": "16.8.6",
     "react-cookie": "^4.0.3",
