--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "isomorphic-unfetch": "^3.0.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
-    "next": "8.0.4",
+    "next": "^9.5.2",
     "next-compose-plugins": "^2.2.0",
     "node-sass": "^4.13.1",
-    "react": "16.8.6",
+    "react": "^16.13.1",
     "react-cookie": "^4.0.3",
-    "react-dom": "16.8.6",
+    "react-dom": "^16.13.1",
     "react-image-gallery": "^1.0.6",
     "react-image-lightbox": "^5.1.1",
     "react-simple-image-slider": "^1.0.2",
